--- a/public/stylesheets/store.css
+++ b/public/stylesheets/store.css
@@ -43,10 +43,17 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 100%;
   height: 80px;
-  background: #fff url(/images/logo.svg) center center no-repeat;
   border-bottom: 1px solid #f3f3ff;
+}
+
+.header-icon {
+  background-image: url(/images/psygig-logo@1x.png);
+  height: 50px;
+  width: 50px;
+  position: absolute;
+  top: 13px;
+  left: calc(50% - 245px);
 }
 
 .header a.shop,
@@ -191,7 +198,6 @@ p.instruction {
   display: inline-table;
   margin-top: -32px;
   padding: 0 5px;
-  text-align: center;
   background: #f8fbfd;
 }
 
